# RedShift-Warehouse-Udacity

./: .gitignore  README.md  pyproject.toml
data/: sample_log.json  sample_song.json
src/: etl.py  main.py
src/redshift_project/: __init__.py  create_tables.py  etl.py  sql_queries.py
